refactor: replace domainID with domain route
