# mqtt/handler.go
@@ -57,7 +57,7 @@ var (
 
 var (
 	errInvalidUserId = errors.New("invalid user id")
-	channelRegExp    = regexp.MustCompile(`^\/?c\\/([\w\-]+)\\/m(\\/[^?]*)?(\?.*)?$`)
+	channelRegExp    = regexp.MustCompile(`^\/?([\w\-]+)/c\/([\w\-]+)\/m(\/[^?]*)?(\?.*)?$`)
 )
 
 // Event implements events.Event interface.
@@ -160,14 +160,14 @@ func (h *handler) Publish(ctx context.Context, topic *string, payload *[]byte) e
 	h.logger.Info(fmt.Sprintf(LogInfoPublished, s.ID, *topic))
 
 	// Topics are in the format:
-	// c/<channel_id>/m/<subtopic>/.../ct/<content_type>
+	// domain_route/c/<channel_id>/m/<subtopic>/.../ct/<content_type>
 
 	channelParts := channelRegExp.FindStringSubmatch(*topic)
 	if len(channelParts) < 3 {
 		return errors.Wrap(ErrFailedPublish, ErrMalformedTopic)
 	}
 
-	domainID := channelParts[1]
+	domainRoute := channelParts[1]
 	chanID := channelParts[2]
 	subtopic := channelParts[3]
 
@@ -178,7 +178,7 @@ func (h *handler) Publish(ctx context.Context, topic *string, payload *[]byte) e
 
 	msg := messaging.Message{
 		Protocol:  protocol,
-		Domain:    domainID,
+		Domain:    domainRoute,
 		Channel:   chanID,
 		Subtopic:  subtopic,
 		Publisher: s.Username,
@@ -228,7 +228,7 @@ func (h *handler) Disconnect(ctx context.Context) error {
 
 func (h *handler) authAccess(ctx context.Context, clientID, topic string, msgType connections.ConnType) error {
 	// Topics are in the format:
-	// c/<channel_id>/m/<subtopic>/.../ct/<content_type>
+	// domain_route/c/<channel_id>/m/<subtopic>/.../ct/<content_type>
 	if !channelRegExp.MatchString(topic) {
 		return ErrMalformedTopic
 	}
@@ -238,15 +238,15 @@ func (h *handler) authAccess(ctx context.Context, clientID, topic string, msgTyp
 		return ErrMalformedTopic
 	}
 
-	domainID := channelParts[1]
+	domainRoute := channelParts[1]
 	chanID := channelParts[2]
 
 	ar := &grpcChannelsV1.AuthzReq{
-		Type:       uint32(msgType),
-		ClientId:   clientID,
-		ClientType: policies.ClientType,
-		ChannelId:  chanID,
-		DomainId:   domainID,
+		Type:        uint32(msgType),
+		ClientId:    clientID,
+		ClientType:  policies.ClientType,
+		ChannelId:   chanID,
+		DomainRoute: domainRoute,
 	}
 	res, err := h.channels.Authorize(ctx, ar)
 	if err != nil {
