# ws/api/requests.go
@@ -6,9 +6,9 @@ package api
 import "github.com/gorilla/websocket"
 
 type connReq struct {
-	clientKey string
-	chanID    string
-	domainID  string
-	subtopic  string
-	conn      *websocket.Conn
+	clientKey   string
+	chanID      string
+	domainRoute string
+	subtopic    string
+	conn        *websocket.Conn
 }
